# academic-archive

./: .gitignore  .lintr  .pre-commit-config.yaml  DESCRIPTION  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: TOOLING.md
graduate-school/: README.md
graduate-school/courses/csci_551_adv_comp_bio/: README.md
graduate-school/courses/csci_551_adv_comp_bio/hw/: 1_match.py  2_align.py  4_center_star.py  5_rmq.py  center_star.py  test.fasta  test2.fasta
graduate-school/courses/csci_551_adv_comp_bio/hw/data/: 1_test.fasta  2_test.fasta  4_test.fasta  4_test1.fasta
graduate-school/csci_551_adv_comp_bio/: 1_match.py  2_align.py  4_center_star.py  README.md
graduate-school/csci_551_adv_comp_bio/data/: 4_test2.fasta
graduate-school/utilities/: __init__.py
post-bacc/: README.md
post-bacc/courses/csci_447_machine_learning/: README.md
post-bacc/courses/csci_447_machine_learning/project_1/: README.md
post-bacc/courses/csci_447_machine_learning/project_1/data/results/abalone/: abalone_-_decision_tree_w_10_fold_cross_validation_-_17sep17.txt  abalone_-_k_nearest_neighbor_w_10_fold_cross_validation_-_17sep17.txt  abalone_-_logistic_regression_w_10_fold_cross_validation_-_17sep17.txt  abalone_-_naive_bayes_w_10_fold_cross_validation_-_17sep17.txt  abalone_-_svm_with_smo_w_10_fold_cross_validation_-_17sep17.txt
post-bacc/courses/csci_447_machine_learning/project_1/src/: arff_converter.py
shared/: __init__.py  path_utils.py
(+20 files in other folders)
